--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
  <body>
   <div class="full-hero hero-home">
     <h1>I'm an h1</h1>
-    <ul>
+    <ul class="social-list">
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Fb</a>
       </li>
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Tw</a>
       </li>
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Gh</a>
       </li>
     </ul>
   </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
-        <div class="social-link">
-          <a href="http://twitter.com/mhartl">here</a>
-        </div>
+        <a href="http://twitter.com/mhartl" class="social-link">Fb</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -44,10 +43,9 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <div class="social-link">
-          <a href="https://twitter.com/leedonahoe">here</a>
-        </div>
+        <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder stashes on
@@ -58,10 +56,9 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
-        <div class="social-link">
-          <a href="https://twitter.com/nickmerwin">here</a>
-        </div>
+        <a href="https://twitter.com/nickmerwin" class="social-link">Gh</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on Jimmy
@@ -72,6 +69,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>??</h3>
         <p>
           The Future
