--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 
     <div class="bio-wrapper">
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">
           Tw
@@ -108,7 +108,7 @@ layout: default
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">
           Tw
@@ -123,7 +123,7 @@ layout: default
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">
           Tw
