working gallery with js

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -99,3 +99,8 @@ layout: default
     <p class="description">A sunset over the Pacific Ocean.</p>
   </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    activateGallery();
+  });
+</script>
