--- a/gallery/index.html
+++ b/gallery/index.html
@@ -91,7 +91,7 @@ layout: default
   </div>
   <div class="col col-content">
     <div class="gallery-photo" id="gallery-photo">
-      <img src="/images/large/boat.jpg" alt="Catamaran">
+      <img src="/images/large/beach.jpg" alt="Venice Beach">
     </div>
   </div>
   <div class="col col-aside gallery-info" id="gallery-info">
